# EasyBuild

./: CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
include/: MyMath.hpp
src/: CMakeLists.txt  Main.cpp  MyMath.cpp
test/: CMakeLists.txt  TestMyMath.cpp
